[gd_scene load_steps=12 format=2]

[ext_resource path="res://font/FONT_1 R AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/time_icon.png" type="Texture" id=2]
[ext_resource path="res://font/FontTheme_Buttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/btn_main_style_1.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/ui/btn_main_style_1p.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/ui/TextoGrande.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/IconoBoton.png" type="Texture" id=7]
[ext_resource path="res://adventure_core/MenuInv.gd" type="Script" id=9]
[ext_resource path="res://font/FONT_2 Titles BubblegumSans-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0.698039, 0.698039, 0.698039, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 62
font_data = ExtResource( 10 )

[node name="MenuInv" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -418.0
margin_right = 418.0
rect_pivot_offset = Vector2( -1545, 451 )
mouse_filter = 2
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -418.0
margin_right = 418.0
color = Color( 0, 0, 0, 0.941176 )

[node name="btn_menu" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 276.0
margin_top = -81.0
margin_right = 440.0
margin_bottom = 99.0
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -464.0
margin_top = -1276.0
margin_right = 464.0
margin_bottom = -6.0
texture = ExtResource( 6 )
patch_margin_top = 374
patch_margin_bottom = 18

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
margin_left = 105.0
margin_top = 263.0
margin_right = 353.0
margin_bottom = 343.0

[node name="rerollIcon" type="TextureRect" parent="NinePatchRect/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true

[node name="rerollIcon2" type="TextureRect" parent="NinePatchRect/HBoxContainer"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true

[node name="rerollIcon3" type="TextureRect" parent="NinePatchRect/HBoxContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.0
margin_top = -482.0
margin_right = 302.0
margin_bottom = -362.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "GAMEBOOK"
align = 1
valign = 1
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -351.0
margin_top = -262.0
margin_right = 368.0
margin_bottom = 310.0

[node name="Label_inv" type="Label" parent="NinePatchRect/ScrollContainer"]
margin_right = 650.0
margin_bottom = 244.0
rect_min_size = Vector2( 650, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -16
custom_fonts/font = SubResource( 2 )
text = "INVENTARIO:
-Espada: Una hermosa espada real, espero no tener que utilizarla
-Carne: Un trozo de carne en dudoso estado"
valign = 1
autowrap = true

[node name="btn_continue" type="Button" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -505.0
margin_top = -450.0
margin_right = -55.0
margin_bottom = -330.0
rect_min_size = Vector2( 450, 120 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Continuar"

[node name="btn_quit" type="Button" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -452.0
margin_right = 506.0
margin_bottom = -332.0
rect_min_size = Vector2( 450, 120 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Salir"

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.5
margin_top = 342.5
margin_right = 348.5
margin_bottom = 521.5
custom_constants/vseparation = 21
custom_constants/hseparation = 13
columns = 5

[node name="B1" type="Button" parent="NinePatchRect/GridContainer"]
margin_right = 129.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B2" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 142.0
margin_right = 271.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B3" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 284.0
margin_right = 413.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B4" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 426.0
margin_right = 555.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B5" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 568.0
margin_right = 697.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B6" type="Button" parent="NinePatchRect/GridContainer"]
margin_top = 100.0
margin_right = 129.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B7" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 142.0
margin_top = 100.0
margin_right = 271.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B8" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 284.0
margin_top = 100.0
margin_right = 413.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B9" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 426.0
margin_top = 100.0
margin_right = 555.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="B10" type="Button" parent="NinePatchRect/GridContainer"]
margin_left = 568.0
margin_top = 100.0
margin_right = 697.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "000"
